# livespine

./: .gitignore  Cargo.toml  README.md
crates/lp-anim/: Cargo.toml
crates/lp-anim/src/: curve.rs  lib.rs  state.rs  timeline.rs
crates/lp-cli/: Cargo.toml
crates/lp-cli/examples/: bone_geometry.rs
crates/lp-cli/src/: main.rs
crates/lp-constraints/: Cargo.toml
crates/lp-constraints/src/: ik.rs  lib.rs  physics.rs  pipeline.rs  transform.rs
crates/lp-constraints/tests/: golden.rs  ik_e2e.rs
crates/lp-core/: Cargo.toml
crates/lp-core/src/: attach.rs  lib.rs  math.rs  skeleton.rs  skin.rs
crates/lp-core/tests/: golden.rs
crates/lp-io/: Cargo.toml
crates/lp-io/src/: lib.rs
crates/lp-render/: Cargo.toml
crates/lp-render/examples/: scan_png.rs
crates/lp-render/src/: lib.rs  renderer.rs
crates/lp-render/tests/: render_smoke.rs
docs/changes/: 01-P0-内核地基.md  README.md
editor/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
editor/src/: App.vue  index.html  types.ts
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/src/: lib.rs  main.rs
editor/src/components/: Timeline.vue  Viewport.vue
tests/fixtures/: demo_char.lp  ik_leg.lp  stickman.lp
tests/golden/constraints/ik_bend_negative/: expected.json  input.json
tests/golden/constraints/ik_reachable/: expected.json  input.json
tests/golden/constraints/physics_gravity/: expected.json  input.json
tests/golden/skinning/two_bone_blend/: expected.json  input.json
tests/golden/transforms/parent_chain/: expected.json  input.json
tests/golden/transforms/rotated_chain/: expected.json  input.json
