[workspace]
resolver = "2"
members = [
    "crates/lp-core",
    "crates/lp-io",
    "crates/lp-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/livepine"

[workspace.dependencies]
# 序列化：仅 serde 派生宏（编译期，非运行时依赖），lp-core 允许
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
